// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components|Basic/Button Colors 1`] = `
<div
  class="p-4"
>
  <div>
    <button
      class="button button--primary"
      type="button"
    >
      <!---->
       Button 
      <!---->
    </button>
     
    <button
      class="button button--secondary"
      type="button"
    >
      <!---->
       Button 
      <!---->
    </button>
     
    <hr />
     
    <button
      class="button button--primary button--color-secondary"
      type="button"
    >
      <!---->
       Button 
      <!---->
    </button>
     
    <button
      class="button button--secondary button--color-secondary"
      type="button"
    >
      <!---->
       Button 
      <!---->
    </button>
  </div>
</div>
`;

exports[`Storyshots Components|Basic/Button Disabled 1`] = `
<div
  class="p-4"
>
  <button
    class="button button--primary"
    disabled="disabled"
    type="button"
  >
    <!---->
     Can't touch this 
    <!---->
  </button>
</div>
`;

exports[`Storyshots Components|Basic/Button Icon 1`] = `
<div
  class="p-4"
>
  <div>
    <button
      class="button button--primary button--icon-only"
      type="button"
    >
      <!---->
       
      <!---->
       
      <i
        class="icon-remove"
      />
    </button>
    <hr />
     
    <button
      class="button button--primary"
      type="button"
    >
      <!---->
       With an icon 
      <i
        class="icon-arrow-right"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Components|Basic/Button Inverted 1`] = `
<div
  class="p-4"
>
  <div
    class="p-3 bg-primary"
  >
    <button
      class="button button--primary button--inverted"
      type="button"
    >
      <!---->
       Button 
      <!---->
    </button>
     
    <button
      class="button button--secondary button--inverted"
      type="button"
    >
      <!---->
       Button 
      <!---->
    </button>
  </div>
</div>
`;

exports[`Storyshots Components|Basic/Button Roles 1`] = `
<div
  class="p-4"
>
  <div>
    <button
      class="button button--primary"
      type="button"
    >
      <!---->
       Primary 
      <!---->
    </button>
    <hr />
     
    <button
      class="button button--secondary"
      type="button"
    >
      <!---->
       Secondary 
      <!---->
    </button>
  </div>
</div>
`;

exports[`Storyshots Components|Basic/Button Sizes 1`] = `
<div
  class="p-4"
>
  <div>
    <button
      class="button button--large"
      type="button"
    >
      <!---->
       Large 
      <!---->
    </button>
    <hr />
     
    <button
      class="button button--primary"
      type="button"
    >
      <!---->
       Regular 
      <!---->
    </button>
    <hr />
     
    <button
      class="button button--small"
      type="button"
    >
      <!---->
       Small 
      <!---->
    </button>
  </div>
</div>
`;

exports[`Storyshots Components|Basic/Button Tryout 1`] = `
<div
  class="p-4"
>
  <div
    class=""
  >
    <button
      class="button button--primary button--color-secondary"
      type="button"
    >
      <!---->
       Hello Storybook 
      <i
        class="icon-plus"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Components|Basic/Button Variants 1`] = `
<div
  class="p-4"
>
  <div>
    <button
      class="button button--primary button--basic"
      type="button"
    >
      <!---->
       Primary basic 
      <!---->
    </button>
    <hr />
     
    <button
      class="button button--secondary button--basic"
      type="button"
    >
      <!---->
       Secondary basic 
      <!---->
    </button>
  </div>
</div>
`;

exports[`Storyshots Components|Basic/Button Wide 1`] = `
<div
  class="p-4"
>
  <button
    class="button button--primary button--wide"
    type="button"
  >
    <!---->
     Wide button 
    <!---->
  </button>
</div>
`;

exports[`Storyshots Components|Basic/Label Basic 1`] = `
<div
  class="p-4"
>
  <span
    class="label"
  >
    
  Basic

  
    <!---->
  </span>
</div>
`;

exports[`Storyshots Components|Basic/Label Colors 1`] = `
<div
  class="p-4"
>
  <div>
    <span
      class="label"
    >
      
  Basic

  
      <!---->
    </span>
     
    <hr />
     
    <span
      class="label label--primary"
    >
      
  Primary

  
      <!---->
    </span>
     
    <span
      class="label label--secondary"
    >
      
  Secondary

  
      <!---->
    </span>
  </div>
</div>
`;

exports[`Storyshots Components|Basic/Label Dismissible 1`] = `
<div
  class="p-4"
>
  <span
    class="label label--dismiss"
  >
    
  Dismissible

  
    <i
      class="icon-x"
    />
  </span>
</div>
`;

exports[`Storyshots Components|Basic/Label Size 1`] = `
<div
  class="p-4"
>
  <div>
    <span
      class="label label--small"
    >
      
  Small

  
      <!---->
    </span>
     
    <span
      class="label label--primary label--small"
    >
      
  Small

  
      <!---->
    </span>
     
    <span
      class="label label--secondary label--small"
    >
      
  Small

  
      <!---->
    </span>
     
    <hr />
     
    <span
      class="label label--pill"
    >
      
  

  
      <!---->
    </span>
     
    <span
      class="label label--primary label--pill"
    >
      
  

  
      <!---->
    </span>
     
    <span
      class="label label--secondary label--pill"
    >
      
  

  
      <!---->
    </span>
     
    <hr />
     
    <span
      class="label label--dot"
    >
      
  

  
      <!---->
    </span>
     
    <span
      class="label label--primary label--dot"
    >
      
  

  
      <!---->
    </span>
     
    <span
      class="label label--secondary label--dot"
    >
      
  

  
      <!---->
    </span>
  </div>
</div>
`;

exports[`Storyshots Components|Basic/Label Tryout 1`] = `
<div
  class="p-4"
>
  <span
    class="label label--secondary label--small"
  >
    
  Hello Storybook

  
    <i
      class="icon-plus"
    />
  </span>
</div>
`;

exports[`Storyshots Components|Basic/Label With an icon 1`] = `
<div
  class="p-4"
>
  <div>
    <span
      class="label"
    >
      
  More

  
      <i
        class="icon-more"
      />
    </span>
     
    <hr />
     
    <span
      class="label label--primary"
    >
      
  Add

  
      <i
        class="icon-plus"
      />
    </span>
     
    <span
      class="label label--secondary"
    >
      
  Secondary

  
      <i
        class="icon-arrow-skip"
      />
    </span>
  </div>
</div>
`;
